--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
     defaultConfig {
-        applicationId "id.technomotion"
+        applicationId "com.qiscus.chat.sample"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
