--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="id.technomotion">
+    package="com.qiscus.chat.sample">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".SampleApp"
+        android:name="com.qiscus.chat.sample.SampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.splash.SplashScreen"
+            android:name="com.qiscus.chat.sample.ui.splash.SplashScreen"
             android:noHistory="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -27,18 +27,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.privatechatcreation.PrivateChatCreationActivity"
+            android:name="com.qiscus.chat.sample.ui.privatechatcreation.PrivateChatCreationActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name="com.qiscus.chat.sample.ui.login.LoginActivity" />
         <activity
-            android:name=".ui.groupchatcreation.GroupChatCreationActivity"
-            android:parentActivityName=".ui.privatechatcreation.PrivateChatCreationActivity"
+            android:name="com.qiscus.chat.sample.ui.groupchatcreation.GroupChatCreationActivity"
+            android:parentActivityName="com.qiscus.chat.sample.ui.privatechatcreation.PrivateChatCreationActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".ui.recentconversation.RecentConversationsActivity" />
         <activity
-            android:name=".ui.homepagetab.HomePageTabActivity"
+            android:name="com.qiscus.chat.sample.ui.homepagetab.HomePageTabActivity"
             android:theme="@style/TabTheme" />
-        <activity android:name=".ui.homepagetab.ProfileActivity"></activity>
+        <activity android:name="com.qiscus.chat.sample.ui.homepagetab.ProfileActivity"></activity>
     </application>
 
 </manifest>
