--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.qiscus.chat.sample"
+        applicationId "com.qiscus.chat.ngobrel"
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
