--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.qiscus.chat.ngobrel.SampleApp"
+        android:name=".SampleApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.qiscus.chat.ngobrel.ui.splash.SplashScreen"
+            android:name=".ui.splash.SplashScreen"
             android:noHistory="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -27,21 +27,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.qiscus.chat.ngobrel.ui.privatechatcreation.PrivateChatCreationActivity"
+            android:name=".ui.privatechatcreation.PrivateChatCreationActivity"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name="com.qiscus.chat.ngobrel.ui.login.LoginActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity
-            android:name="com.qiscus.chat.ngobrel.ui.groupchatcreation.GroupChatCreationActivity"
-            android:parentActivityName="com.qiscus.chat.ngobrel.ui.privatechatcreation.PrivateChatCreationActivity"
+            android:name=".ui.groupchatcreation.GroupChatCreationActivity"
+            android:parentActivityName=".ui.privatechatcreation.PrivateChatCreationActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity
-            android:name="com.qiscus.chat.ngobrel.ui.homepagetab.HomePageTabActivity"
+            android:name=".ui.homepagetab.HomePageTabActivity"
             android:theme="@style/TabTheme" />
-        <activity android:name="com.qiscus.chat.ngobrel.ui.homepagetab.ProfileActivity"></activity>
+        <activity android:name=".ui.homepagetab.ProfileActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBSWs1GBTWfmDeyLJqRFysC5oaM-u_RPJw"/>
+            android:value="AIzaSyBSWs1GBTWfmDeyLJqRFysC5oaM-u_RPJw" />
     </application>
 
 </manifest>
