--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
+Properties properties = new Properties()
+InputStream inputStream = project.rootProject.file('local.properties').newDataInputStream()
+properties.load( inputStream )
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -16,9 +20,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        buildTypes.each {
+            it.buildConfigField("String", "QISCUS_SECRET", properties.getProperty('qiscus_secret'))
+        }
     }
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.1'
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -30,7 +41,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'com.qiscus.sdk:chat:2.24.2-e2e-encryption-snapshot1'
+    //implementation 'com.qiscus.sdk:chat:2.24.2-e2e-encryption-snapshot1'
+    implementation project(':chat')
 }
 
 apply plugin: 'com.google.gms.google-services'
