--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".SampleApp"
+        android:name=".NgobrelApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -41,6 +41,9 @@
         <activity
             android:name=".ui.groupchatroom.GroupChatRoomActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.groupdetail.GroupDetailActivity"
+            android:windowSoftInputMode="stateHidden" />
 
         <service android:name=".service.FirebaseService">
             <intent-filter>
