--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name=".ui.groupdetail.GroupDetailActivity"
             android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".ui.addmember.AddGroupMemberActivity" />
 
         <service android:name=".service.FirebaseService">
             <intent-filter>
