--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':chat'
-project(':chat').projectDir = new File('/Users/zetra./Documents/Android_Project/qiscus-chat-library/chat')
+//include ':app', ':chat'
+//project(':chat').projectDir = new File('/Users/zetra./Documents/Android_Project/qiscus-chat-library/chat')
