--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
-//include ':app', ':chat'
+include ':app'
+//include ':chat'
 //project(':chat').projectDir = new File('/Users/zetra./Documents/Android_Project/qiscus-chat-library/chat')
